@@ -20,6 +20,7 @@
 		<script type="text/javascript" src="js/buildings/water_launch_pad.js"></script>
 		<script type="text/javascript" src="js/buildings/taelon_power_generator.js"></script>
 		<script type="text/javascript" src="js/buildings/training_facility.js"></script>
+		<script type="text/javascript" src="js/buildings/training_facility2.js"></script>
 		<script type="text/javascript" src="js/buildings/assembly_plant.js"></script>
 		<script type="text/javascript" src="js/buildings/camera_tower.js"></script>
 		<script type="text/javascript" src="js/buildings/taelon_mine.js"></script>
