@@ -51,3 +51,5 @@ TrainingFacilityBuilding.move_matrix = [0,0,1,1,0,0,1,1,1,0,1,1,0,1,1,0,1,1,0,1,
 TrainingFacilityBuilding.cell_padding = {x: 2, y: 2};
 TrainingFacilityBuilding.image_size = {x: 113, y: 100};
 TrainingFacilityBuilding.image_padding = {x: 0, y: 0};
+
+TrainingFacilityBuilding.upgradable = true;
